[package]
name = "apple1"
version = "0.1.0"
authors = ["Alexander Akhmetov <me@aleks.sh>"]
edition = "2021"

[[bin]]
name = "apple1"
path = "src/main.rs"

[lib]
name = "apple1"
path = "src/lib.rs"

[[bin]]
name = "apple1"
path = "src/bin.rs"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
clap = "2.34.0"
ncurses = "5.101.0"
mos6502 = {git = "https://github.com/alexander-akhmetov/mos6502/", tag = "0.2.0"}
