[package]
name = "apple1"
version = "0.3.0"
authors = ["Alexander Akhmetov <me@alx.cx>"]
edition = "2024"

[features]
default = ["binary"]
binary = ["clap", "ncurses"]

[lib]
name = "apple1"
path = "src/lib.rs"

[[bin]]
name = "apple1"
path = "src/bin.rs"

[dependencies]
log = "0.4"
env_logger = "0.11.7"
clap = {version = "4.5.34", optional = true}
ncurses = {version = "6.0.1", optional = true}
mos6502 = {git = "https://github.com/alexander-akhmetov/mos6502/", tag = "0.3.0"}
